# devskiller-sample-cmake-calculator

./: .gitignore  CMakeLists.txt  README.md  devskiller.json
src/: Calculator.cpp  Calculator.hpp
test/: CalculatorTest.cpp  VerificationCalculatorTest.cpp
